grammars/tree-sitter/iron/grammar.js
    source_file: $ => repeat($._declaration),

    // D-09: patch_declaration inserted directly after object_declaration
    // (natural object/patch/interface/enum order).
    _declaration: $ => choice(
      $.import_declaration,
      $.object_declaration,
      $.patch_declaration,
      $.interface_declaration,
      $.enum_declaration,
      $.func_declaration,
      $.method_declaration,
      $.extern_func_declaration,
      $.val_declaration,
      $.var_declaration,
    ),

    // Keywords generated from src/lexer/lexer.c kw_table at configure time.
    // 'and', 'await', 'comptime', 'copy', 'defer', 'drop', 'elif', 'else', 'enum', 'extends', 'extern', 'false', 'for', 'free', 'func', 'heap', 'if', 'impl', 'import', 'in', 'init', 'interface', 'is', 'leak', 'match', 'mut', 'nocopy', 'not', 'null', 'object', 'or', 'parallel', 'patch', 'pool', 'private', 'pub', 'pure', 'rc', 'readonly', 'return', 'self', 'spawn', 'super', 'true', 'unchecked', 'val', 'var', 'weak', 'while' expands to 'and', 'await', ..., 'while'.
    // Present so test_grammar_keyword_drift_tree_sitter has a substitution
    // target even though the full grammar inlines keyword literals in
    // concrete rules.
    import_declaration: $ => seq(
      'import',
      field('path', $.import_path),
      optional(seq('as', field('alias', $.identifier))),
    ),
    import_path: $ => seq($.identifier, repeat(seq('.', $.identifier))),

    // object Name[<GenericParams>] [extends Parent] [impl I1, I2] { val name: T, var name: T }
    // Phase 35 GRM-06 (Plan 35-01): optional `nocopy` prefix modifier
    // (`nocopy object FileHandle { ... }`) via $.nocopy_modifier named child.
    object_declaration: $ => seq(
      optional(field('marker', $.nocopy_modifier)),
      'object',
      field('name', $.identifier),
      optional($.generic_params),
      optional(seq('extends', field('parent', $.identifier))),
      optional(seq('impl', field('implements',
          seq($.identifier, repeat(seq(',', $.identifier)))))),
      '{',
      repeat($._object_member),
      '}',
    ),

    // D-06: _object_member expanded to include init_declaration and
    // block_method_declaration alongside the pre-v3 field_declaration.
    // Phase 35 GRM-06 (Plan 35-01): drop_block + copy_block added so v4
    // `drop { ... }` / `copy { ... }` hooks inside object bodies parse.
    _object_member: $ => choice(
      $.field_declaration,
      $.init_declaration,
      $.block_method_declaration,
      $.drop_block,
      $.copy_block,
    ),
    // D-19/D-23 (Plan 13-02): optional `pub` prefix on field_declaration so
    // v3 `pub val id: Int` / `pub var health: Int` (per
    // tests/integration/v3_pub_field_synthesis.iron and v3_modifiers.txt
    // Case 1) parses without ERROR nodes. Plan 13-01 omitted this; the
    // visibility_modifier prefix discipline mirrors func_declaration (line
    // 199) and init_declaration (line 291).
    field_declaration: $ => seq(
      optional($.visibility_modifier),
      field('qualifier', choice('val', 'var')),
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
      optional(','),
    ),

    // interface Name { func sig() -> T  func other(p: T) }
    interface_declaration: $ => seq(
      'interface',
      field('name', $.identifier),
      optional($.generic_params),
      '{',
      repeat($.method_signature),
      '}',
    ),

    // Phase 87 IFACE-01/IFACE-03 (Plan 13-03 deviation): interface method
    // signatures accept an optional `readonly`/`pure` tier modifier prefix
    // (parser.c:4501-4525) AND an optional default body `{ ... }` after the
    // return type (parser.c:4554-4560). Surfaced by tests/integration/
    // v3_iface_default_body.iron (`readonly func describe() -> Int { return 42 }`
    // inside an `interface` body) once Plan 13-03 trimmed the integration-corpus
    // skip list. Mirrors the modifier-prefix discipline applied to
    // func_declaration (D-13) and block_method_declaration (D-11).
    method_signature: $ => seq(
      repeat($.mutation_tier_modifier),
      'func',
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      optional(seq('->', field('return_type', $._type))),
      optional(field('body', $.block)),
    ),

    // enum Name[<Generics>] { Variant, Variant(T), Variant(T, U) }
    enum_declaration: $ => seq(
      'enum',
      field('name', $.identifier),
      optional($.generic_params),
      '{',
      optional(seq(
        $.enum_variant,
        repeat(seq(',', $.enum_variant)),
        optional(','),
      )),
      '}',
    ),

    enum_variant: $ => seq(
      field('name', $.identifier),
      optional(seq(
        '(',
        optional(seq($._type, repeat(seq(',', $._type)))),
        ')',
      )),
      optional(seq('=', field('ordinal', $.integer_literal))),
    ),

    // func [fusible] name[<G>](params) [-> T] { body }
    // Method form: func TypeName.method[<G>](params) [-> T] { body }
    // Array extension: func [T].method(...) { body }
    // D-13: optional(visibility_modifier) + repeat(mutation_tier_modifier)
    // prefix between @fusible and 'func' (e.g. `pub func`, `pure func`,
    // `pub readonly func` at top level — needed by v3 fixtures like
    // v3_pure_method.iron and v3_pub_field_synthesis.iron).
    func_declaration: $ => seq(
      optional(seq('@', 'fusible')),
      optional($.visibility_modifier),
      repeat($.mutation_tier_modifier),
      'func',
      field('name', $.identifier),
      optional($.generic_params),
      field('parameters', $.parameter_list),
      optional(seq('->', field('return_type', $._type))),
      field('body', $.block),
    ),

    method_declaration: $ => seq(
      optional(seq('@', 'fusible')),
      'func',
      choice(
        // Array extension method: func [T].name(...)
        seq('[', field('elem_type', $.identifier), ']', '.'),
        // Type method: func TypeName.name(...)
        seq(field('type_name', $.identifier), '.'),
      ),
      field('name', $.identifier),
      optional($.generic_params),
      field('parameters', $.parameter_list),
      optional(seq('->', field('return_type', $._type))),
      field('body', $.block),
    ),

    val_declaration: $ => seq(
      'val',
      field('binding', choice($.identifier, $.tuple_binding)),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expression))),
    ),

    var_declaration: $ => seq(
      'var',
      field('binding', choice($.identifier, $.tuple_binding, '_')),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expression))),
    ),

    // Tuple destructure binding: val (x, y) = pair — Phase 59 P01d
    extern_func_declaration: $ => seq(
      'extern',
      'func',
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      optional(seq('->', field('return_type', $._type))),
    ),

    // generic params: [T] or [T, U] or [T, U, V]
    parameter_list: $ => seq('(', optional(commaSep1($.parameter)), ')'),
    // D-04: optional `mut` modifier prefix on parameter (legacy v2 receiver-
    // form tolerance — semantically rejected by parser as IRON_ERR_V3_MUT_*
    // but syntactically tolerated to avoid ERROR nodes on v2 code mid-
    // migration; LSP-side QF-01 surfaces the codemod).
    parameter: $ => seq(
      optional(field('modifier', $.param_mut_modifier)),
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
    ),

    // ── v3 modifier rules (D-01) ────────────────────────────────────────
    // Named modifier rules (not anonymous-inline tokens): GRM-02 highlights
    // queries express modifier capture as `(visibility_modifier) @keyword`
    // and `(mutation_tier_modifier) @keyword.modifier` against the named
    // structural node. `mutation_tier_modifier` accepts both `readonly` and
    // `pure`; multi-tier stacking via repeat(...) at the call site.
    block: $ => seq('{', repeat($._statement), '}'),

    _statement: $ => choice(
      $.val_declaration,
      $.var_declaration,
      $.assignment_statement,
      $.if_statement,
      $.while_statement,
      $.for_statement,
      $.match_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.defer_statement,
      $.free_statement,
      $.leak_statement,
      $.arena_block,
      $.expression_statement,
    ),

    assignment_statement: $ => prec.right(1, seq(
      field('target', $._expression),
      field('op', choice(
        '=', '+=', '-=', '*=', '/=',
        // Phase 59 compound-assign bitwise forms
        '<<=', '>>=', '&=', '|=', '^=',
      )),
      field('value', $._expression),
    )),

    if_statement: $ => seq(
      'if',
      field('condition', $._expression),
      field('consequence', $.block),
      repeat($.elif_clause),
      optional($.else_clause),
    ),
    elif_clause: $ => seq(
      'elif', field('condition', $._expression), field('consequence', $.block),
    ),
    else_clause: $ => seq('else', field('consequence', $.block)),

    while_statement: $ => seq(
      'while', field('condition', $._expression), field('body', $.block),
    ),

    for_statement: $ => seq(
      'for',
      field('variable', $.identifier),
      'in',
      field('iterable', $._expression),
      // `parallel` modifier: `for i in n parallel { ... }` (Phase 49 pfor)
      optional(field('modifier', 'parallel')),
      field('body', $.block),
    ),

    match_statement: $ => seq(
      'match',
      field('subject', $._expression),
      '{',
      repeat($.match_arm),
      optional($.match_else_arm),
      '}',
    ),
    match_arm: $ => seq(
      field('pattern', $._pattern),
      '->',
      field('body', $._match_arm_body),
    ),
    match_else_arm: $ => seq(
      'else', '->',
      field('body', $._match_arm_body),
    ),
    _match_arm_body: $ => choice(
      $.block,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.assignment_statement,
      $._expression,
    ),

    return_statement: $ => prec.right(seq(
      'return',
      optional(field('value', $._expression)),
    )),

    break_statement: $ => 'break',
    continue_statement: $ => 'continue',

    // defer { block } | defer single_statement (e.g. `defer println(...)`)
    // Phase 35 GRM-06 (Plan 35-01): defer free <expr> form added so the
    // canonical v4 defer-free pattern (`defer free p`) parses as a
    // defer_statement wrapping a free_statement.
    defer_statement: $ => seq('defer', choice(
      $.block,
      $.free_statement,
      $._expression,
    )),

    // Phase 35 GRM-06 (Plan 35-01): free <expr> statement form mirrors
    // parser.c:3008 IRON_TOK_FREE handling. The full free_statement is
    // reachable both bare (`free p`) and inside defer (`defer free p`).
    expression_statement: $ => prec(-1, $._expression),

    // ── Expressions ────────────────────────────────────────────────────

    _expression: $ => choice(
      $.binary_expression,
      $.unary_expression,
      $.is_expression,
      $.call_expression,
      $.member_expression,
      $.index_expression,
      $.parenthesized_expression,
      $.tuple_expression,
      $.array_literal,
      $.lambda_expression,
      $.heap_expression,
      $.rc_expression,
      $.weak_rc_expression,
      $.comptime_expression,
      $.await_expression,
      $.spawn_expression,
      $.string_literal,
      $.integer_literal,
      $.float_literal,
      $.boolean_literal,
      $.null_literal,
      $.self_expression,
      $.identifier,
    ),

    binary_expression: $ => choice(
      prec.left(3,  seq($._expression, field('op', choice('or', '||')),  $._expression)),
      prec.left(4,  seq($._expression, field('op', choice('and', '&&')), $._expression)),
      prec.left(5,  seq($._expression, field('op', '|'),                 $._expression)),
      prec.left(6,  seq($._expression, field('op', '^'),                 $._expression)),
      prec.left(7,  seq($._expression, field('op', '&'),                 $._expression)),
      prec.left(8,  seq($._expression, field('op', choice('==', '!=')),  $._expression)),
      prec.left(9,  seq($._expression, field('op', choice('<', '>', '<=', '>=')), $._expression)),
      prec.left(10, seq($._expression, field('op', choice('<<', '>>')),  $._expression)),
      prec.left(11, seq($._expression, field('op', choice('+', '-')),    $._expression)),
      prec.left(12, seq($._expression, field('op', choice('*', '/', '%')), $._expression)),
    ),

    unary_expression: $ => prec.right(13, seq(
      field('op', choice('-', '!', '~', 'not')),
      $._expression,
    )),

    call_expression: $ => prec.left(14, seq(
      field('function', $._expression),
      '(',
      optional(commaSep1($._expression)),
      ')',
    )),

    member_expression: $ => prec.left(14, seq(
      field('object', $._expression),
      '.',
      field('property', $.identifier),
    )),

    index_expression: $ => prec.left(14, seq(
      field('collection', $._expression),
      '[',
      field('index', $._expression),
      ']',
    )),

    array_literal: $ => seq(
      '[',
      optional(seq($._expression, repeat(seq(',', $._expression)), optional(','))),
      ']',
    ),

    lambda_expression: $ => seq(
      'func',
      field('parameters', $.parameter_list),
      optional(seq('->', field('return_type', $._type))),
      field('body', $.block),
    ),

    self_expression: $ => 'self',

    // Prefix-keyword expressions — all bind at UNARY precedence (13).
    // Phase 35 GRM-06 (Plan 35-01): heap_expression accepts an optional
    // heap_options clause (`heap(in: arena, allow_drop_skip: true) T(...)`)
    // mirroring parser.c:1499 IRON_TOK_HEAP named-option-list path; bare
    // `heap T(...)` form remains unchanged.
    heap_expression:     $ => prec.right(13, seq(
      'heap',
      optional($.heap_options),
      $._expression,
    )),
    _pattern: $ => choice(
      $.literal_pattern,
      $.wildcard_pattern,
      $.variant_pattern,
      $.identifier_pattern,
    ),

    literal_pattern: $ => choice(
      $.integer_literal, $.float_literal, $.string_literal,
      $.boolean_literal, $.null_literal,
    ),
    identifier_pattern: $ => $.identifier,

    // EnumName.Variant or EnumName.Variant(args)
    variant_pattern: $ => prec(1, seq(
      field('enum_name', $.identifier),
      '.',
      field('variant', $.identifier),
      optional(seq(
        '(',
        optional(seq($._pattern, repeat(seq(',', $._pattern)))),
        ')',
      )),
    )),

    // ── Types ──────────────────────────────────────────────────────────

    _type: $ => choice(
      $.array_type,
      $.bounded_vector_type,
      $.function_type,
      $.tuple_type,
      $.pointer_type,
      $.rc_type,
      $.weak_rc_type,
      $.nullable_type,
      $.generic_type,
      $.type_identifier,
    ),

    type_identifier: $ => $.identifier,

    nullable_type: $ => prec(1, seq($.type_identifier, '?')),

    array_type: $ => prec(3, seq(
      '[',
      $._type,
      optional(seq(';', $._expression)),
      // Phase 48 layout hints: , layout: soa / , unordered — tolerated.
      repeat(seq(',', choice(
        seq('layout', ':', $.identifier),
        'unordered',
      ))),
      ']',
    )),

    // Phase 35 GRM-06 (Plan 35-01): bounded vector type `[T; <=N]` (VEC-01).
    // Distinguished from array_type by the literal `<=` token between `;`
    // and the size expression — tree-sitter's GLR picks the right form by
    // lookahead. Strict form `[T; N]` stays in array_type.
    function_type: $ => prec(4, seq(
      'func', '(',
      optional(seq($._type, repeat(seq(',', $._type)))),
      ')',
      optional(seq('->', $._type)),
    )),

    // (T, U)  — tuple type, arity >= 2
    boolean_literal: $ => choice('true', 'false'),
