grammars/tree-sitter/iron/test/corpus/strings.txt
==========
plain string
==========

val s = "hello"

---

(source_file
  (val_declaration
    binding: (identifier)
    value: (string_literal)))

==========
interpolated string
==========

val s = "value is {x}"

---

(source_file
  (val_declaration
    binding: (identifier)
    value: (string_literal
      (interpolation
        (identifier)))))

==========
string with escape
==========

val s = "hello\nworld"

---

(source_file
  (val_declaration
    binding: (identifier)
    value: (string_literal
      (escape_sequence))))

==========
string literal nested in interpolation
==========

val s = "hi {greet("bob")}"

---

(source_file
  (val_declaration
    binding: (identifier)
    value: (string_literal
      (interpolation
        (call_expression
          function: (identifier)
          (string_literal))))))

==========
unicode and brace escapes
==========

val s = "\u{e9} \{x\}"

---

(source_file
  (val_declaration
    binding: (identifier)
    value: (string_literal
      (escape_sequence)
      (escape_sequence)
      (escape_sequence))))

================================================================================
A string holding a closing brace inside a nested interpolation
================================================================================

func main() {
    println("{"a{"}"}b"}")
}

--------------------------------------------------------------------------------

(source_file
  (func_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (expression_statement
        (call_expression
          function: (identifier)
          (string_literal
            (interpolation
              (string_literal
                (interpolation
                  (string_literal))))))))))
